~~~~~~~~~~~~~~
ztv Change Log
~~~~~~~~~~~~~~

------------------
v0.1.3dev
------------------

2015-07-29:
- implemented that z-key on primary image activates a plot in z-dim of image stack in plot_panel 

pre-2015-07-29:
- updated version number b/c realized had already released 0.1.2
- fixed bug in plot_panel where doing slice beyond image size caused warnings.
- implemented click-and-drag to aperture radii on profile plot in phot_panel

------------------
v0.1.2, 2015-04-22
------------------

- updated version number b/c had already released 0.1.1dev 

------------------
v0.1.0post2, 2015-04-22
------------------

- added default_data_dir, and default_autoload-pattern options
- changed default color of lines to be more visible against gist-heat map
- added auto-stats-box option for scaling on load of new image
- Fix bug in reading fits files that was a problem in autoloading when fits file hadn't yet been written fully to disk.

------------------
v0.1.0post1, 2015-04-22
------------------

- Fixed several bugs for use on linux/ubuntu

------------------
v0.1.0, 2015-04-20
------------------

- First public release to github and pypi

------------------
v0.0.0, 2014-08-05
------------------

- Initial project creation, combining bunch of hroe's code from other places